[tool.poetry]
name = "storage"
version = "0.2.0"
description = ""
authors = ["rychanya <rychanya@gmail.ru>"]

[tool.poetry.dependencies]
python = "^3.10.2"
pydantic = "^1.8.2"
pymongo = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^21.12b0", allow-prereleases = true}
isort = "^5.10.1"
flake8 = "^4.0.1"
coverage = "^6.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 119